# project2_Sitnikova_Irina_255

./: .gitignore  Makefile  README.md  db_meta.json  demo.cast  pyproject.toml
data/: users.json
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
